# DjangoProject1

./: README.md  pyproject.toml
hello/firstapp/: admin.py  forms.py  models.py  views.py
hello/firstapp/migrations/: 0001_initial.py  0002_alter_orderitem_article_alter_orderitem_quantity.py
hello/hello/: settings.py  urls.py
hello/static/css/: style.css
hello/templates/: index.html
hello/templates/account/: login.html
hello/templates/firstapp/: about.html  contact.html  home.html  index.html  index_app1.html  order_detail.html  orders_list.html
hello/templates/socialaccount/: login.html
